force.com/CALM/src/objects/Step__c.object
<CustomObject>
    <fields>
        <fullName>an__c</fullName>
        <description>The name of the action</description>
        <label>Action Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dt__c</fullName>
        <description>Defines whether its a screen or event</description>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>f__c</fullName>
        <label>Funnel</label>
        <referenceTo>Funnel__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fn__c</fullName>
        <description>The name of the funnel to be connected to.</description>
        <label>Funnel Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>p__c</fullName>
        <description>The position in the step the field is</description>
        <label>Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>